2009-01-31  Bruno coudoin  <bruno.coudoin@free.fr>

	Vitali Perchonok is com gmail from vitali.pe
	Prevent an evil crash bug when the kids press 2 buttons at the same time

	* src/boards/menu2.c: (item_event):

2009-01-30  Bruno coudoin  <bruno.coudoin@free.fr>

	Vitali Perchonok is com gmail from vitali.pe
	Fixed small bug (2 player mode) -> show happy flower even if player 2 wins

	* src/boards/python/connect4.py:

2009-01-30  Bruno coudoin  <bruno.coudoin@free.fr>

	Vitali Perchonok is com gmail from vitali.pe
	Fixed refresh issue of tux.

	* src/boards/python/bargame.py:

2009-01-30  Bruno coudoin  <bruno.coudoin@free.fr>

	Vitali Perchonok is com gmail from vitali.pe
	Allow only left button on HOME.
	Using left button only should prevent the menu from freezing
        when pressing two or more buttons at the same time

	* src/gcompris/bar.c: (item_event_bar):

2009-01-30  Bruno coudoin  <bruno.coudoin@free.fr>

	Miguel DE IZARRA implemented the wordlist selector.
	We need some improvement to save data in the ~/My GCompris
	instead of the system datadir directory.

	* src/boards/advanced_colors.c: (add_xml_data):
	* src/boards/click_on_letter.c: (config_start):
	* src/boards/colors.c: (colors_config_start):
	* src/boards/gletters.c: (gletter_config_start):
	* src/boards/imageid.c: (add_xml_data), (config_start):
	* src/boards/missingletter.c: (config_start):
	* src/boards/py-mod-gcompris.c: (py_gc_board_config_boolean_box),
	(py_gc_board_config_combo_box), (py_gc_board_config_radio_buttons),
	(py_gc_board_config_spin_int), (py_gc_board_conf_separator),
	(py_gc_board_config_combo_locales),
	(py_gc_board_config_combo_locales_asset),
	(py_gc_board_config_textview):
	* src/boards/reading.c: (reading_config_start):
	* src/boards/scale.c: (config_start):
	* src/boards/shapegame.c: (config_start):
	* src/boards/smallnumbers.c: (smallnumber_config_start):
	* src/boards/wordsgame.c: (start_board), (conf_ok),
	(wordsgame_config_start), (wordsgame_config_stop):